Fixed double scrollbar problem in Firefox

--- a/css/iTunesAlbums.css
+++ b/css/iTunesAlbums.css
@@ -5,12 +5,15 @@
 html,
 body {
   overflow-x: hidden; /*  Prevent scroll on narrow devices */
-  overflow-y: scroll;
-  /* -webkit-overflow-scrolling: touch; */
+  height: 100%;
 }
+
 body {
   padding-top: 0px;
   background-color: #F9F8F9;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 footer {
   /*padding: 30px 0;*/
